# pvz

./: .env  .env.j2  components.d.ts  index.html  package-lock.json  package.json  release-key.jks  tsconfig.json  vite.config.ts
.cargo/: config.toml
scripts/: run-tauri.mjs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: device copy.rs  device.rs
src-tauri/src/memory/: error.rs  mod.rs  operat.rs
src-tauri/src/pos/: index.rs
src-tauri/src/utils/: memory_reader.rs  mod.rs  util.rs
src/api/: article.ts
src/assets/scss/: main.css
src/components/: customTitle.vue
src/layout/: layout.vue
src/routers/: index.ts
src/store/: index.ts  theme.ts
src/types/: callRust.ts
src/utils/: SystemTray.ts  callRust.ts  index.ts  request.ts  storageUtils.ts
src/views/about/: index.vue
src/views/article/: detail.vue  index.vue
src/views/cpal/: detail.vue  index.vue  problemFankuiStatistics.vue  types.ts
src/views/cpal/components/: CpalCompatibilitySection.vue  CpalHeroCard.vue  CpalRoutingSection.vue  CpalStatusMetricsSection.vue  CpalVBCableCard.vue
src/views/home/: index.vue
src/views/pvz/: index.vue
src/views/settings/: index.vue
src/views/windowPos/: index.vue
