[package]
name = "pvz"
version = "0.1.2"
description = "植物大战僵尸杂交版V3.9的外挂rust实现"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pvz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1" #json工具
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_ToolHelp",
     "Win32_System_Memory",  # 添加这一行
     "Win32_System_Diagnostics_Debug",   # 启用Diagnostics::Debug模块
] }
cpal = "0.16.0" #音频播放库
ringbuf = "0.4.8" #环形缓冲区 音频依赖
lazy_static = "1.5.0" #懒加载静态变量
once_cell = "1.21.3" #懒加载静态变量
onnxruntime = "0.0.14"

